<resources>
    <string name="app_name">FragmentsDPA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_principal">Principal</string>
    <string name="title_registro">Registro</string>
    <string name="title_musica">Mùsica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="valetfullname">Enter a full name</string>
    <string name="valetemail">Enter your email</string>
    <string name="valtexthelpemail">Only ue.edu.pe</string>
    <string name="valrbtfemale">Female</string>
    <string name="valrbtmale">Male</string>
    <string name="valrbtothers">Others</string>
    <string name="valchklicense">License?</string>
    <string name="valchkcar">Car?</string>
    <string name="valbtnsave">Save</string>

    <string-array name="country_array">
        <item>Brasil</item>
        <item>Argentina</item>
        <item>Uruguay</item>
        <item>Ecuador</item>
        <item>Peru</item>
        <item>Chile</item>
        <item>Venezuela</item>
        <item>Colombia</item>
        <item>Bolivia</item>
    </string-array>


</resources>