<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegistroFragment">

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/valetfullname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="379dp"
        android:layout_height="74dp"
        android:layout_marginTop="4dp"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:helperText="@string/valtexthelpemail"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"
        app:passwordToggleEnabled="false"
        app:startIconDrawable="@android:drawable/ic_dialog_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valetemail" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="259dp"
        android:layout_height="147dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <RadioButton
            android:id="@+id/rbtMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtmale" />

        <RadioButton
            android:id="@+id/rbtFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtfemale" />

        <RadioButton
            android:id="@+id/rbtOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtothers" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spnCountry"
        android:layout_width="348dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/chkLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/valchklicense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCountry" />

    <CheckBox
        android:id="@+id/chkCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:text="@string/valchkcar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCountry" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="309dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:text="@string/valbtnsave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkLicense" />
</androidx.constraintlayout.widget.ConstraintLayout>